--- a/AssetModTemplate/AssetMod.csproj
+++ b/AssetModTemplate/AssetMod.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>MyAssetMod</AssemblyName>
-    <Product>MakimaVS</Product>
+    <AssemblyName>succudevmod</AssemblyName>
+    <Product>succudevmod</Product>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
@@ -27,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\..\VSVRMod2\Libs\Managed\Assembly-CSharp.dll</HintPath>
+    </Reference>
     <Reference Include="PlayMaker">
       <HintPath>Libs\PlayMaker.dll</HintPath>
     </Reference>
